--- a/src/css/style.css
+++ b/src/css/style.css
@@ -362,7 +362,10 @@
 }
 .container main .ourTeamSection main {
   display: flex;
-  gap: 5%;
+  gap: 50px;
+}
+.container main .ourTeamSection main .teamProfileContant .teamProfileImg {
+  width: 50%;
 }
 .container main .ourTeamSection main .teamProfileContant .teamProfileContantSocialMidias {
   display: flex;
@@ -370,6 +373,7 @@
 }
 .container main .ourTeamSection main .teamProfileContant .teamProfileContantSocialMidias img {
   cursor: pointer;
+  width: 100%;
 }
 .container main .ourHappyCostumersSection {
   text-align: center;
@@ -666,6 +670,9 @@
   .container main .appInterfaceSectionBottomDownloadAppWrapper {
     flex-direction: column;
     align-items: center;
+  }
+  .container main .teamProfileContainer {
+    flex-direction: column;
   }
 }
 
