--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -562,7 +562,7 @@ $gray-paragraphs-text-color: #6C6C72;
                 display: flex;
                 flex-direction: column;
 
-                width: 75vh;
+                width: 50%;
 
                 gap: 10px;
 
@@ -570,7 +570,6 @@ $gray-paragraphs-text-color: #6C6C72;
                     display: flex;
 
                     .swiper-slide {
-
                         color: $primary-text-color;
 
                         border-radius: 10px;
@@ -980,6 +979,12 @@ $gray-paragraphs-text-color: #6C6C72;
 
             .teamProfileContainer {
                 flex-direction: column;
+            }
+
+            .ourHappyCostumersSection {
+                .swiper {
+                    width: 100%;
+                }
             }
 
         }
